force-app/main/default/objects/Case/fields/CFACE_Closed_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>CFACE_Closed_Date_Text__c</fullName>
    <description>This field is to be used for Email Archive tool, to flag records that need to be archived by updating this field with the case closed year / month-year, to be used in the archive tool.</description>
    <label>Closed Date Text (CFACE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>