force-app/main/default/objects/Case/fields/Change_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Number__c</fullName>
    <description>ID number from Service Center</description>
    <inlineHelpText>Service Center number</inlineHelpText>
    <label>Change Control Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>