force-app/main/default/objects/Case/fields/Change_Control_Required_NCSP__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Required_NCSP__c</fullName>
    <label>Change Control Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>