force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Gitlab #25577 To capture the case creation channel. This can be used to store the type of channel through which the case was created to be used on the back end. We are currently unable to stamp the case origin for Service Cloud Voice direct calls</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>