force-app/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>