force-app/main/default/objects/Case/fields/Closed_Late_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Late_On_Time__c</fullName>
    <formula>IF(((DATEVALUE(ClosedDate) &gt; (Target_Completion_Date__c))), &quot;Late&quot;,&quot;On Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Late/On Time</label>
    <type>Text</type>
</CustomField>