force-app/main/default/objects/Case/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 - Price = Customer is unhappy with price</fullName>
            </value>
            <value>
                <fullName>2 - In-House = Storing on-site, or off-site self-storage, no longer outsourcing storage/shredding</fullName>
            </value>
            <value>
                <fullName>3 - Service Quality = (Care, or missed services)</fullName>
            </value>
            <value>
                <fullName>4 - Competitor = Competitor is trying to take business</fullName>
            </value>
            <value>
                <fullName>5 - Economic Change = Out of business, acquired, bankrupt</fullName>
            </value>
            <value>
                <fullName>6 - Program Change = Conversion to digital/no longer generating paper</fullName>
            </value>
            <value>
                <fullName>7 - Account Set Up in Error</fullName>
            </value>
            <value>
                <fullName>8 - Retention Period Met = Destroying all inventory, empty &amp; remove happened</fullName>
            </value>
            <value>
                <fullName>9 - Issue Resolution</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>