force-app/main/default/objects/Case/fields/Community_Prechat_How_can_we_help_you__c.field-meta.xml
<CustomField>
    <fullName>Community_Prechat_How_can_we_help_you__c</fullName>
    <description>This field is used in the LATAM Community portal Pre chat - #9914</description>
    <label>How can we help you?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>