force-app/main/default/objects/Case/fields/Community_User_Language__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Language__c</fullName>
    <label>Community User Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>