force-app/main/default/objects/Case/fields/Confirm_Final_Service__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Final_Service__c</fullName>
    <label>Confirm Final Service</label>
    <type>DateTime</type>
</CustomField>