force-app/main/default/objects/Case/fields/Confirm_SecureSync_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Confirm_SecureSync_Training_Complete__c</fullName>
    <description>date entered after calling the customer to confirm the training has been completed</description>
    <inlineHelpText>enter the date after calling the customer to confirm the training has been completed</inlineHelpText>
    <label>Confirm SecureSync Training Complete</label>
    <type>DateTime</type>
</CustomField>