force-app/main/default/objects/Case/fields/Contact_Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alt_Email__c</fullName>
    <inlineHelpText>Alternative customer email address</inlineHelpText>
    <label>Contact Alt Email</label>
    <type>Email</type>
</CustomField>