force-app/main/default/objects/Case/fields/Contact_Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alt_Phone__c</fullName>
    <inlineHelpText>Alternative customer phone #</inlineHelpText>
    <label>Contact Alt Phone</label>
    <type>Phone</type>
</CustomField>