force-app/main/default/objects/Case/fields/Contract_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Contact_Email__c</fullName>
    <description>The email address of the contact responsible for executing the contract</description>
    <inlineHelpText>The email address of the contact responsible for executing the contract</inlineHelpText>
    <label>Contract Contact Email</label>
    <type>Email</type>
</CustomField>