force-app/main/default/objects/Case/fields/Contract_Info__c.field-meta.xml
<CustomField>
    <fullName>Contract_Info__c</fullName>
    <formula>&quot;To review the Contract, go to the Opportunity and click the &apos;Contract Name&apos; link&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Info</label>
    <type>Text</type>
</CustomField>