force-app/main/default/objects/Case/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <label>Contract Renewal Date</label>
    <type>DateTime</type>
</CustomField>