force-app/main/default/objects/Case/fields/Contract_signed_to_NCSP__c.field-meta.xml
<CustomField>
    <fullName>Contract_signed_to_NCSP__c</fullName>
    <formula>CASE(MOD( DATEVALUE(Date_Contract_Signed__c) - DATE(1985,6,24),7),  0 , 
CASE(MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( DATEVALUE(Date_Paperwork_Received__c) - DATEVALUE(Date_Contract_Signed__c) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed to NCSP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>