force-app/main/default/objects/Case/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <inlineHelpText>Current contact review status</inlineHelpText>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted with amendments</fullName>
            </value>
            <value>
                <fullName>Rejected with amendments</fullName>
            </value>
            <value>
                <fullName>Re Review</fullName>
            </value>
            <value>
                <fullName>Sales Rep Follow-up</fullName>
            </value>
            <value>
                <fullName>Accepted with Follow up</fullName>
            </value>
            <value>
                <fullName>Accepted with Comment</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Document Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>