force-app/main/default/objects/Case/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A5000</fullName>
            </value>
            <value>
                <fullName>A7000</fullName>
            </value>
            <value>
                <fullName>Affiliate Option 1</fullName>
            </value>
            <value>
                <fullName>Affiliate Option 2</fullName>
            </value>
            <value>
                <fullName>Breach Reporting Amendment</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>IM-35</fullName>
            </value>
            <value>
                <fullName>IM-38</fullName>
            </value>
            <value>
                <fullName>IM-38E</fullName>
            </value>
            <value>
                <fullName>IM-45</fullName>
            </value>
            <value>
                <fullName>IM5000</fullName>
            </value>
            <value>
                <fullName>IM5000LLC13</fullName>
            </value>
            <value>
                <fullName>IM5000T</fullName>
            </value>
            <value>
                <fullName>IMCC-38</fullName>
            </value>
            <value>
                <fullName>IMCC-38F</fullName>
            </value>
            <value>
                <fullName>IMCC5000713</fullName>
            </value>
            <value>
                <fullName>IMCC-5000F</fullName>
            </value>
            <value>
                <fullName>IMCC-5000T</fullName>
            </value>
            <value>
                <fullName>IMCCZONEOPT</fullName>
            </value>
            <value>
                <fullName>IM IM Zone</fullName>
            </value>
            <value>
                <fullName>Live Vault</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>Non Standard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>SITAD</fullName>
            </value>
            <value>
                <fullName>SOW (Statement Of Work)</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>