force-app/main/default/objects/Case/fields/Cost_Summary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Summary_Amount__c</fullName>
    <label>Term Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>