force-app/main/default/objects/Case/fields/Cost_Summary_Attempt3__c.field-meta.xml
<CustomField>
    <fullName>Cost_Summary_Attempt3__c</fullName>
    <label>Date Term Quote Attempt 3</label>
    <type>DateTime</type>
</CustomField>