force-app/main/default/objects/Case/fields/Count_Cases_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Count_Cases_within_SLA__c</fullName>
    <formula>IF(NOT((Case_Progress2__c =  &apos;Past Due&apos;)), 1,0)</formula>
    <label>Count Cases within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>