force-app/main/default/objects/Case/fields/Count_of_Audited_Cases__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Audited_Cases__c</fullName>
    <formula>IF(
ISBLANK(Audit_Assigned_To__c),
0,1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Audited Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>