force-app/main/default/objects/Case/fields/Count_of_Customer_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Customer_Accounts__c</fullName>
    <description>Total number of customer accounts related to the case marked as &quot;Include&quot;</description>
    <label>Count of Customer Accounts</label>
    <summaryFilterItems>
        <field>Case_Customer_Account__c.Include_on_Case__c</field>
        <operation>equals</operation>
        <value>Include</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Customer_Account__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>