force-app/main/default/objects/Case/fields/Count_of_Date_Welcome_Call_Attempt_1__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Date_Welcome_Call_Attempt_1__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF(  ISNULL(Date_Welcome_Call_Attempt_1__c)  , NULL, 1)</formula>
    <label>Count of Date Welcome Call Attempt 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>