force-app/main/default/objects/Case/fields/Count_of_Initial_Supply_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Initial_Supply_Order_Date__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF( ISNULL( Initial_Supply_Order_Date__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Initial Supply Order Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>