force-app/main/default/objects/Case/fields/Count_of_SecureSync_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Count_of_SecureSync_Training_Completed__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF(ISNULL(SecureSync_Training_Completed__c) &amp;&amp; ISPICKVAL(NCSP_Service_line__c, &apos;DP&apos;), 0 , 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of SecureSync Training Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>