force-app/main/default/objects/Case/fields/Count_of_Service_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Service_Order_Date__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF( ISNULL( Service_Order_Date__c ) , 0, 1)</formula>
    <label>Count of Service Order Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>