force-app/main/default/objects/Case/fields/Count_of_Service_Order_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Service_Order_Not_Completed__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF(NOT(ISNULL(Date_Paperwork_Received__c)) &amp;&amp; ISNULL(Service_Completion_Date__c), 1 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Service Order Not Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>