force-app/main/default/objects/Case/fields/Count_of_Supplies_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Supplies_Delivered_Date__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF( ISNULL( Supplies_Delivered_Date__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Supplies Delivered Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>