force-app/main/default/objects/Case/fields/Count_of_Welcome_Call_1_Not_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Welcome_Call_1_Not_Attempted__c</fullName>
    <description>This field is added for reports</description>
    <formula>IF(NOT(ISNULL(Date_Paperwork_Received__c)) &amp;&amp; ISNULL(Date_Welcome_Call_Attempt_1__c), 1 , 0 )</formula>
    <label>Count of Welcome Call 1 Not Attempted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>