force-app/main/default/objects/Case/fields/Created_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_Year__c</fullName>
    <formula>CASE( MONTH(  DATEVALUE(CreatedDate)  ) , 1,&apos;Jan&apos;,2,&apos;Feb&apos;,3,&apos;Mar&apos;,4,&apos;Apr&apos;, 5,&apos;May&apos;,6,&apos;Jun&apos;,7,&apos;Jul&apos;,8,&apos;Aug&apos;,9,&apos;Sep&apos;, 10,&apos;Oct&apos;,11,&apos;Nov&apos;,&apos;Dec&apos;)
+&apos;-&apos;+
RIGHT( TEXT( YEAR(  DATEVALUE(CreatedDate)   ) ) ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month Year</label>
    <type>Text</type>
</CustomField>