force-app/main/default/objects/Case/fields/Customer_Account_Status_Gov_t_Only__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Status_Gov_t_Only__c</fullName>
    <label>Customer Account Status (Gov&apos;t Only)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>LW</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>