force-app/main/default/objects/Case/fields/Customer_approved_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_approved_Cost_Summary__c</fullName>
    <label>Customer Approved Term Quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>