force-app/main/default/objects/Case/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>5-7 alphanumeric characters</inlineHelpText>
    <label>Customer ID</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>