force-app/main/default/objects/Case/fields/Customer_ID_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_ReadOnly__c</fullName>
    <formula>Customer_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>