force-app/main/default/objects/Case/fields/Customer_Info_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Info_Form_Submitted_Date__c</fullName>
    <inlineHelpText>Stores the timestamp of when the Customer Information form for this Case has been submitted</inlineHelpText>
    <label>Customer Info Form Submitted</label>
    <type>DateTime</type>
</CustomField>