force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Customer_ID__r.IM_Customer_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>