force-app/main/default/objects/Case/fields/Customer_Onboarding_Contact_Change__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding_Contact_Change__c</fullName>
    <inlineHelpText>The last time a customer made changes to their contact information</inlineHelpText>
    <label>Changes to Contact Fields</label>
    <type>DateTime</type>
</CustomField>