force-app/main/default/objects/Case/fields/Customer_Onboarding_CP_Field_Change__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding_CP_Field_Change__c</fullName>
    <inlineHelpText>Last time a customer changed information on their customer profile</inlineHelpText>
    <label>Changes made to Billing Address</label>
    <type>DateTime</type>
</CustomField>