force-app/main/default/objects/Case/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer Profile that is created by the Send to NCSP wizard and associated to this case and opportunity</description>
    <label>Customer Profile</label>
    <referenceTo>Customer_Profile__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>