force-app/main/default/objects/Case/fields/Customer_Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Received_Date__c</fullName>
    <label>Customer Request Received Date</label>
    <type>DateTime</type>
</CustomField>