force-app/main/default/objects/Case/fields/Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off__c</fullName>
    <label>Cut Off SLA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rush</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>15:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>17:30</fullName>
            </value>
            <value>
                <fullName>18:12</fullName>
            </value>
            <value>
                <fullName>Next day</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>16:30</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>12:45</fullName>
            </value>
            <value>
                <fullName>13:45</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>14:15</fullName>
            </value>
            <value>
                <fullName>15:15</fullName>
            </value>
            <value>
                <fullName>15:45</fullName>
            </value>
            <value>
                <fullName>16:45</fullName>
            </value>
            <value>
                <fullName>14:45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>