force-app/main/default/objects/Case/fields/CX_Program__c.field-meta.xml
<CustomField>
    <fullName>CX_Program__c</fullName>
    <label>CX Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>