force-app/main/default/objects/Case/fields/CX_Survey_Transcript__c.field-meta.xml
<CustomField>
    <fullName>CX_Survey_Transcript__c</fullName>
    <formula>HYPERLINK(&apos;https://services.walkerinfo.com/smartsum&apos; &amp; &apos;?id=&apos; &amp; TEXT(FLOOR(Respondent_ID__c)) &amp; &apos;&amp;templateId=&apos;&amp;TEXT(FLOOR(SS_Template_ID__c))&amp;&apos;&amp;a=35&amp;unauthHandler=loginPrompt&apos;, &apos;Report&apos;, &apos;_blank&apos;)</formula>
    <label>CX Survey Transcript</label>
    <type>Text</type>
</CustomField>