force-app/main/default/objects/Case/fields/Data_Entry_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Entry_Audit_Status__c</fullName>
    <label>Data Entry Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audit_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>