force-app/main/default/objects/Case/fields/Date_2nd_Order_Fulfillment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_2nd_Order_Fulfillment_Sent__c</fullName>
    <label>Date 2nd Order Fulfillment Sent</label>
    <type>Date</type>
</CustomField>