force-app/main/default/objects/Case/fields/Date_2nd_Restricted_Party_Screening__c.field-meta.xml
<CustomField>
    <fullName>Date_2nd_Restricted_Party_Screening__c</fullName>
    <description>The date the NCSP CSA submits the technical contact’s credentials to the  ‘Visual Compliance’ website for a second review.</description>
    <label>Date 2nd Restricted Party Screening</label>
    <type>Date</type>
</CustomField>