force-app/main/default/objects/Case/fields/Date_Account_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Inactivated__c</fullName>
    <label>Date Account Inactivated</label>
    <type>DateTime</type>
</CustomField>