force-app/main/default/objects/Case/fields/Date_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Approval_Received__c</fullName>
    <label>Date Approval Received</label>
    <type>DateTime</type>
</CustomField>