force-app/main/default/objects/Case/fields/Date_Audit_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Audit_Assigned__c</fullName>
    <label>Date Audit Assigned</label>
    <type>DateTime</type>
</CustomField>