force-app/main/default/objects/Case/fields/Date_Closure_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Closure_Complete__c</fullName>
    <label>Date Closure Complete</label>
    <type>DateTime</type>
</CustomField>