force-app/main/default/objects/Case/fields/Date_Closure_CSA_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Closure_CSA_Assigned__c</fullName>
    <description>This field will be updated through a workflow when a closure rep is assigned or takes ownership of the case. It will be read only to NA profiles except Closure Management who will have access to edit.</description>
    <inlineHelpText>The Date is populated when a Closure Representative is initially assigned / takes ownership of a case. It will not be populated if assigned to a Queue.</inlineHelpText>
    <label>Date Closure CSA Assigned</label>
    <type>DateTime</type>
</CustomField>