force-app/main/default/objects/Case/fields/Date_Confirmation_Fulfillment_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirmation_Fulfillment_Received__c</fullName>
    <description>The date NCSP receives confirmation from Iron Mountain’s partner that the order has been successfully processed.</description>
    <label>Date Confirmation Fulfillment Received</label>
    <type>Date</type>
</CustomField>