force-app/main/default/objects/Case/fields/Date_Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Approved__c</fullName>
    <label>Date Contract Approved</label>
    <type>DateTime</type>
</CustomField>