force-app/main/default/objects/Case/fields/Date_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Signed__c</fullName>
    <inlineHelpText>Effective date of Customer Signature</inlineHelpText>
    <label>Date Contract Signed</label>
    <type>DateTime</type>
</CustomField>