force-app/main/default/objects/Case/fields/Date_Contracts_CSA_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Contracts_CSA_Assigned__c</fullName>
    <label>Date Contracts CSA Assigned</label>
    <type>DateTime</type>
</CustomField>