force-app/main/default/objects/Case/fields/Date_Cost_Summary_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Cost_Summary_Sent_to_Customer__c</fullName>
    <label>Date Cost Summary Sent to Customer</label>
    <type>DateTime</type>
</CustomField>