force-app/main/default/objects/Case/fields/Date_Destruction_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Destruction_Order_Created__c</fullName>
    <label>Date Destruction Order Created</label>
    <type>DateTime</type>
</CustomField>